--- a/OnlineRestaurant/OnlineRestaurant/Views/Category/AllCategories.cshtml
+++ b/OnlineRestaurant/OnlineRestaurant/Views/Category/AllCategories.cshtml
@@ -1,17 +1,22 @@
 ﻿<h1>Index</h1>
 @model List<Category>
 <br />
-<a asp-action="New" asp-controller="Category">Add Cateogory</a>
+@if (User.IsInRole("Admin"))
+{
 
+<a asp-action="New" asp-controller="Category">Add Cateogory</a>
+}
 <table class="table able-bordered table-hover">
     <thead>
 
-    <th>Category Name</th>
-    <th>Category Description</th>
-    <th>View Details</th>
-    <th>Edit Category</th>
-    <th>Delete Category</th>
-
+        <th>Category Name</th>
+        <th>Category Description</th>
+        <th>View Details</th>
+        @if (User.IsInRole("Admin"))
+        {
+            <th>Edit Category</th>
+            <th>Delete Category</th>
+        }
 
     </thead>
 
@@ -20,9 +25,13 @@
         <tr>
             <td>@item.Name</td>
             <td>@item.Description</td>
-            <td><a href="Category/Details/@item.Id">Show Details</a></td>
-            <td><a href="Category/Edit/@item.Id">Edit</a></td>
+            <td><a href="/Category/Details/@item.Id">Show Details</a></td>
+            @if (User.IsInRole("Admin"))
+            {
+
+            <td><a href="/Category/Edit/@item.Id">Edit</a></td>
             <td><a asp-action="Delete" asp-controller="Category" asp-route-id="@item.Id">Delete</a></td>
+            }
         </tr>
     }
 
