--- a/OnlineRestaurant/OnlineRestaurant/Views/Account/Login.cshtml
+++ b/OnlineRestaurant/OnlineRestaurant/Views/Account/Login.cshtml
@@ -30,7 +30,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-controller="Home">Home</a>
 </div>
 
 @section Scripts {
