--- a/OnlineRestaurant/OnlineRestaurant/Views/Shared/_Layout.cshtml
+++ b/OnlineRestaurant/OnlineRestaurant/Views/Shared/_Layout.cshtml
@@ -23,7 +23,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                        @if (User.Identity.IsAuthenticated){
+                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Getall">Category</a>
                         </li>
                         <li class="nav-item">
@@ -32,16 +33,27 @@
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Ingredient" asp-action="GetAll">Ingredient</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-                        </li>
-                            <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
-                        </li>
-                         </li>
+                             <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">Orders</a>
+                            </li>
+
+
+                         @* </li> *@
                             <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
                         </li>
+                        }
+
+                        @if(!User.Identity.IsAuthenticated ){
+                                <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                            </li>
+                                <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                            </li>
+                        }
+                        
+
                     </ul>
                 </div>
             </div>
