--- a/OnlineRestaurant/OnlineRestaurant/Views/Account/Login.cshtml
+++ b/OnlineRestaurant/OnlineRestaurant/Views/Account/Login.cshtml
@@ -1,61 +1,48 @@
-﻿@model OnlineRestaurant.ViewModels.UserLoginVM
+﻿ @model OnlineRestaurant.ViewModels.UserLoginVM
 
 @{
-
     ViewData["Title"] = "Login";
-
     Layout = "_LayoutLogin";
 }
 
 <h1>Login</h1>
-
 <hr />
-<div class="row">
-    
-    <div class="col-md-8">
-       
-        
-        <div class="container align-content-center" >
-
-        <form method="post">
-            <!-- 2 column grid layout with text inputs for the first and last names -->
-
-           
-            <div class="row">
-                <div class="col-md-12 mb-4"> 
-                    <div class="form-outline">
-                         <label asp-for="UserName" class="control-label "></label> 
-                 <input asp-for="UserName" class="form-control " /> 
-                 <span asp-validation-for="UserName" class="text-danger"></span> 
-                    </div> 
-                </div>
+<div class=" container  m-5">
+    <div class="row">
+        <div class="col-md-8">
+            <form method="post">
+                <div class="row">
+                    <div class="col-md-12 mb-4">
+                        <div>
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <label asp-for="UserName" class="control-label"></label>
+                            <input asp-for="UserName" class="form-control border-black" />
+                            <span asp-validation-for="UserName" class="text-danger"></span>
+                        </div>
+                    </div>
                 </div>
                 <div class="row">
-                <div class="col-md-12 mb-4"> 
-                    <div class="form-outline"> 
-                       <label asp-for="Password" class="control-label "></label> 
-                 <input asp-for="Password" class="form-control " /> 
-                 <span asp-validation-for="Password" class="text-danger"></span> 
-                     </div> 
-                </div> 
-            </div> 
-
-             
-            
-
-            <!-- Submit button --> 
-            <button type="submit" class="btn btn-primary btn-block mb-4">  
-                Login 
-            </button>
-
-         </form>
-
+                    <div class="col-md-12 mb-4">
+                        <div>
+                            <label asp-for="Password" class="control-label"></label>
+                            <input asp-for="Password" class="form-control border-black" />
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block mb-4">
+                        Login
+                    </button>
+            </form>
         </div>
     </div>
 </div>
 
+</div>
 
-                <script src="~/lib/jquery/dist/jquery.js"></script>
+
+
+
+<script src="~/lib/jquery/dist/jquery.js"></script>
 <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
 
