--- a/OnlineRestaurant/OnlineRestaurant/Views/Account/Register.cshtml
+++ b/OnlineRestaurant/OnlineRestaurant/Views/Account/Register.cshtml
@@ -9,70 +9,71 @@
 
 
 <hr />
-<div class="row">
-    <div class="col-md-8">
-
-
-
-        <form method="post" asp-action="Register">
-            <!-- 2 column grid layout with text inputs for the first and last names -->
-
-
-            <div class="row">
-                <div class="col-md-12 mb-4">
-                    <div class="form-outline">
-                        <label asp-for="UserName" class="control-label "></label>
-                        <input asp-for="UserName" class="form-control border-black"/>
-                        <span asp-validation-for="UserName" class="text-danger"></span>
+<div class="container  m-5">
+    <div class="row ">
+        <div class="col-md-8">
+            <form method="post" asp-action="Register">
+                <div class="row">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="col-md-12 mb-4">
+                        <div>
+                            <label asp-for="UserName" class="control-label "></label>
+                            <input asp-for="UserName" class="form-control border-black" />
+                            <span asp-validation-for="UserName" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="col-md-12 mb-4">
-                    <div class="form-outline">
-                         <label asp-for="Email" class="control-label"></label> 
-                 <input asp-for="Email" class="form-control"/> 
-                 <span asp-validation-for="Email" class="text-danger"></span> 
+                <div class="row">
+                    <div class="col-md-12 mb-4">
+                        <div>
+                            <label asp-for="Email" class="control-label"></label>
+                            <input asp-for="Email" class="form-control border-black" />
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-            </div>
-
-
-
-            <div class="row">
-                <div class="col-md-12 mb-4">
-                    <div class="form-outline">
-                        <label asp-for="Password" class="control-label"></label>
-                        <input asp-for="Password" class="form-control"/>
-                        <span asp-validation-for="Password" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-md-12 mb-4">
+                        <div>
+                            <label asp-for="Address" class="control-label"></label>
+                            <input asp-for="Address" class="form-control border-black" />
+                            <span asp-validation-for="Address" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-            </div>
 
 
-            <div class="row">
-                <div class="col-md-12 mb-4">
-                    <div class="form-outline">
-                        <label asp-for="ConfirmPassword" class="control-label"></label>
-                        <input asp-for="ConfirmPassword" class="form-control"/>
-                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-md-12 mb-4">
+                        <div>
+                            <label asp-for="Password" class="control-label"></label>
+                            <input asp-for="Password" class="form-control border-black" />
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-            </div>
 
 
-            <!-- Submit button -->
-            <button type="submit" class="btn btn-primary btn-block mb-4">
-                Sign Up
-            </button>
+                <div class="row">
+                    <div class="col-md-12 mb-4">
+                        <div>
+                            <label asp-for="ConfirmPassword" class="control-label"></label>
+                            <input asp-for="ConfirmPassword" class="form-control border-black" />
+                            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                        </div>
+                    </div>
+                </div>
 
-        </form>
+
+                <!-- Submit button -->
+                <button type="submit" class="btn btn-primary btn-block mb-4">
+                    Sign Up
+                </button>
+
+            </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Login">Login</a>
 </div>
 
 
