--- a/OnlineRestaurant/OnlineRestaurant/Views/Order/GetOrder.cshtml
+++ b/OnlineRestaurant/OnlineRestaurant/Views/Order/GetOrder.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "GetOrder";
+    Layout = "_CreateOrderLayout";
+
 }
 
 <h1>GetOrder</h1>
@@ -31,12 +33,9 @@
         @foreach (OrderItem item in Model.OrderItems)
         {
             <dd class="col-sm-10">
-                <strong>Order Item:</strong> @* @Html.DisplayFor(modelItem => item.product.Name) *@<p>@item.product.Name</p>
+                <strong>Order Item:</strong> <p>@item.product.Name</p>
             </dd>
         }
     </dl>
 </div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
-</div>
+
